<resources>
    <string name="app_name">Things on Time</string>

    <string name="textRegistration">У вас нет аккаунта?</string>
    <string name="event_tittle">Событие</string>
    <string name="event_name">Название события</string>
    <string name="event_start">Начало</string>
    <string name="event_finish">Окончание</string>

    <string name="example_year_and_month">2022 Июль</string>
    <string name="example_week_number">1</string>
    <string name="example_day_number">1</string>
    <string name="example_event_date">20:00 – 20:05</string>
    <string name="example_event_name">Полить кактус</string>

    <string name="short_monday">пн</string>
    <string name="short_tuesday">вт</string>
    <string name="short_wednesday">ср</string>
    <string name="short_thursday">чт</string>
    <string name="short_friday">пт</string>
    <string name="short_saturday">сб</string>
    <string name="short_sunday">вс</string>

    <string name="logout">Выйти</string>
    <string name="share">Поделиться</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>

    <string name="invalid_password">Пароль должен содержать строчные и прописные латинские буквы, цифры.</string>
    <string name="invalid_password_lenght">Пароль должен быть не менее 8 и не более 24 символов.</string>
    <string name="invalid_login_lenght">Логин должен быть не менее 8 и не более 24 символов.</string>
    <string name="invalid_username">Логин должен состоять из букв и цифр, первый символ обязательно буква, ограничение 20 символов.</string>
    <string name="invalid_email">Некорректный email.</string>
    <string name="password_not_match">Пароли не совпадают.</string>
    <string name="bad_credentials">Неверное имя пользователя или пароль.</string>
    <string name="connection_error">Не удалось подключиться к серверу. Попробуйте позже.</string>
    <string name="user_exists">Пользователь с таким именем уже существует.</string>
    <string name="email_sent">На вашу электронную почту отправлено письмо для подтверждения регистрации.</string>

    <string name="registration">Зарегистрироваться</string>
    <string name="registration_tittle">Регистрация</string>
    <string name="login">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="login_account">Войти в аккаунт</string>


</resources>