<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.72"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            app:autoSizePresetSizes="@array/autosize_text_sizes"
            app:autoSizeTextType="uniform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.13"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.72"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login"
            app:autoSizePresetSizes="@array/autosize_text_sizes"
            app:autoSizeTextType="uniform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Login"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.491"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.72"
        app:startIconDrawable="@drawable/key">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            app:autoSizePresetSizes="@array/autosize_text_sizes"
            app:autoSizeTextType="uniform"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/login"
        app:autoSizePresetSizes="@array/autosize_text_sizes"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutPassword"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.25" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/textRegistration"
        app:autoSizePresetSizes="@array/autosize_text_sizes"
        app:autoSizeTextType="uniform"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutPassword"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutPassword"
        app:layout_constraintTop_toBottomOf="@+id/buttonInput"
        app:layout_constraintVertical_bias="0.593"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.72" />

    <Button
        android:id="@+id/buttonInviteToRegistration"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/registration"
        app:autoSizePresetSizes="@array/autosize_text_sizes"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.72" />

    <TextView
        android:id="@+id/forgottPasswod"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        app:autoSizePresetSizes="@array/autosize_text_sizes"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/buttonInput"
        app:layout_constraintVertical_bias="0.228"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.72" />
</androidx.constraintlayout.widget.ConstraintLayout>